增加clienthub服务
