# parallelfun-api/app/clienthub/internal/server/http.go
@@ -1,0 +1,22 @@
+package server
+
+// NewHTTPServer new an HTTP server.
+//func NewHTTPServer(c *conf.Server, greeter *service.ClientHubService, logger log.Logger) *http.Server {
+//	var opts = []http.ServerOption{
+//		http.Middleware(
+//			recovery.Recovery(),
+//		),
+//	}
+//	if c.Http.Network != "" {
+//		opts = append(opts, http.Network(c.Http.Network))
+//	}
+//	if c.Http.Addr != "" {
+//		opts = append(opts, http.Address(c.Http.Addr))
+//	}
+//	if c.Http.Timeout != nil {
+//		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
+//	}
+//	srv := http.NewServer(opts...)
+//	v1.RegisterClientHubHTTPServer(srv, greeter)
+//	return srv
+//}
